--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,6 +18,12 @@
     <button mat-raised-button disabled>Disabled</button>
     <a mat-raised-button href="https://www.google.com/" target="_blank">Link</a>
   </div>
-  
+
 </section>
+
+<div class="container">
+  <h1 class="text-center mt-5">Welcome to My Angular App</h1>
+  <button class="btn btn-primary">Click Me!</button>
+</div>
+
 
